--- a/checkeng/main_window.ui
+++ b/checkeng/main_window.ui
@@ -28,6 +28,7 @@
      <string>&amp;Help</string>
     </property>
     <addaction name="action_About"/>
+    <addaction name="a_start"/>
    </widget>
    <addaction name="menuAbout"/>
   </widget>
@@ -35,6 +36,14 @@
   <action name="action_About">
    <property name="text">
     <string>&amp;About</string>
+   </property>
+  </action>
+  <action name="a_start">
+   <property name="text">
+    <string>&amp;Start</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
  </widget>
@@ -56,8 +65,25 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>a_start</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>onStart()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onAboutClick()</slot>
+  <slot>onStart()</slot>
  </slots>
 </ui>
