--- a/checkeng/login/login.ui
+++ b/checkeng/login/login.ui
@@ -199,8 +199,8 @@
                <font>
                 <family>DejaVu Sans</family>
                 <pointsize>15</pointsize>
-                <weight>75</weight>
-                <bold>true</bold>
+                <weight>50</weight>
+                <bold>false</bold>
                </font>
               </property>
               <property name="maxLength">
