--- a/checkeng/one_of_three/one_of_three.ui
+++ b/checkeng/one_of_three/one_of_three.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>OneOfThree</class>
- <widget class="QWidget" name="OneOfThree">
+ <class>OneOfThreeWidget</class>
+ <widget class="QWidget" name="OneOfThreeWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
