--- a/checkeng/login/login.ui
+++ b/checkeng/login/login.ui
@@ -257,7 +257,10 @@
               <property name="font">
                <font>
                 <family>DejaVu Sans</family>
-                <pointsize>25</pointsize>
+                <pointsize>23</pointsize>
+                <weight>50</weight>
+                <italic>false</italic>
+                <bold>false</bold>
                </font>
               </property>
               <property name="text">
