--- a/checkeng/dialogs/add_tasks/add_tasks.ui
+++ b/checkeng/dialogs/add_tasks/add_tasks.ui
@@ -39,24 +39,6 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="2">
-      <widget class="QCheckBox" name="cb_answer1">
-       <property name="font">
-        <font>
-         <family>DejaVu Sans</family>
-         <pointsize>17</pointsize>
-         <weight>50</weight>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="layoutDirection">
-        <enum>Qt::LeftToRight</enum>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
      <item row="4" column="2">
       <widget class="QLabel" name="label">
        <property name="font">
@@ -69,9 +51,6 @@
        </property>
        <property name="text">
         <string>&amp;Right Key</string>
-       </property>
-       <property name="buddy">
-        <cstring>cb_answer1</cstring>
        </property>
       </widget>
      </item>
@@ -129,21 +108,6 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="2">
-      <widget class="QCheckBox" name="ch_answer3">
-       <property name="font">
-        <font>
-         <family>DejaVu Sans</family>
-         <pointsize>17</pointsize>
-         <weight>50</weight>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
      <item row="4" column="1">
       <widget class="QLabel" name="label_2">
        <property name="font">
@@ -159,21 +123,6 @@
        </property>
        <property name="buddy">
         <cstring>le_answer1</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="2">
-      <widget class="QCheckBox" name="ch_answer2">
-       <property name="font">
-        <font>
-         <family>DejaVu Sans</family>
-         <pointsize>17</pointsize>
-         <weight>50</weight>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string/>
        </property>
       </widget>
      </item>
@@ -219,6 +168,27 @@
        </property>
        <property name="buddy">
         <cstring>le_task</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="2">
+      <widget class="QRadioButton" name="radioButton">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="2">
+      <widget class="QRadioButton" name="radioButton_2">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="2">
+      <widget class="QRadioButton" name="radioButton_3">
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
@@ -303,11 +273,8 @@
  </widget>
  <tabstops>
   <tabstop>le_answer1</tabstop>
-  <tabstop>cb_answer1</tabstop>
   <tabstop>le_answer2</tabstop>
-  <tabstop>ch_answer2</tabstop>
   <tabstop>le_asnwer3</tabstop>
-  <tabstop>ch_answer3</tabstop>
   <tabstop>pb_cancel</tabstop>
   <tabstop>pb_finish</tabstop>
   <tabstop>pb_nexttask</tabstop>
